polish style for setup package, improve functionality

--- a/setup/all_set.html
+++ b/setup/all_set.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Set</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="sidebar">
@@ -17,6 +17,15 @@
     </div>
 
     <div class="main-content">
+        <nav class="top-nav">
+            <a href="../setup.html">Setup Intro</a>
+            <a href="how_to_sit.html">How to Sit</a>
+            <a href="tips.html">Tips</a>
+            <a href="good_posture.html">Good Posture</a>
+            <a href="bad_posture.html">Bad Posture</a>
+            <a href="all_set.html" class="active">All Set</a>
+        </nav>
+
         <h1>All Set!</h1>
         <p>Great job! Your posture tracking setup is complete.</p>
         <p>You're now ready to start monitoring and improving your posture.</p>
