--- a/setup/how_to_sit.html
+++ b/setup/how_to_sit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Sit</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="sidebar">
@@ -17,13 +17,23 @@
     </div>
 
     <div class="main-content">
+        <nav class="top-nav">
+            <a href="../setup.html">Setup Intro</a>
+            <a href="how_to_sit.html" class="active">How to Sit</a>
+            <a href="tips.html">Tips</a>
+            <a href="good_posture.html">Good Posture</a>
+            <a href="bad_posture.html">Bad Posture</a>
+            <a href="all_set.html">All Set</a>
+        </nav>
+
         <h1>How to Sit</h1>
         <p>Sitting with good posture is dependent on many factors.</p>
         <p>Position your computer screen level with your eyeline so that you don't need to tilt your head forward to look at it.</p>
         <p>If using a laptop, a stand and separate keyboard and mouse can help to prevent you from hunching over forwards.</p>
         <p>Sit your hips to the back of the chair and keep your pelvis neutral to avoid rounding the lower back.</p>
         <p>Keep your shoulders relaxed and down.</p>
-        <button onclick="window.location.href='tips.html'">Next ➡</button>
+
+        <button onclick="window.location.href='good_posture.html'">Next ➡</button>
     </div>
 </body>
 </html>
