--- a/setup/bad_posture.html
+++ b/setup/bad_posture.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Posture</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="sidebar">
@@ -17,13 +17,30 @@
     </div>
 
     <div class="main-content">
+        <nav class="top-nav">
+            <a href="../setup.html">Setup Intro</a>
+            <a href="how_to_sit.html">How to Sit</a>
+            <a href="tips.html">Tips</a>
+            <a href="good_posture.html">Good Posture</a>
+            <a href="bad_posture.html" class="active">Bad Posture</a>
+            <a href="all_set.html">All Set</a>
+        </nav>
+
         <h1>Bad Posture</h1>
         <p>That was great!</p>
         <p>Now, we need to see you slouching.</p>
         <p>Slouch down in the chair.</p>
         <p>Relax and be lazy.</p>
         <p>Now press the button to begin.</p>
-        <button onclick="window.location.href='all_set.html'">Next ➡</button>
+
+        <div class="button-group">
+            <button onclick="startCamera()">🎥 Try It Now</button>
+            <button onclick="window.location.href='all_set.html'">Next ➡</button>
+        </div>
+        
+        <video id="camera-feed" autoplay></video>
     </div>
+
+    <script src="../script.js"></script>
 </body>
 </html>
