--- a/setup/tips.html
+++ b/setup/tips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="sidebar">
@@ -17,6 +17,15 @@
     </div>
 
     <div class="main-content">
+        <nav class="top-nav">
+            <a href="../setup.html">Setup Intro</a>
+            <a href="how_to_sit.html">How to Sit</a>
+            <a href="tips.html" class="active">Tips</a>
+            <a href="good_posture.html">Good Posture</a>
+            <a href="bad_posture.html">Bad Posture</a>
+            <a href="all_set.html">All Set</a>
+        </nav>
+
         <h1>Tips</h1>
         <p>For best results:</p>
         <p>Don't move your computer or adjust the screen angle during the setup process.</p>
