revise next button

--- a/setup/how_to_sit.html
+++ b/setup/how_to_sit.html
@@ -33,7 +33,9 @@
         <p>Sit your hips to the back of the chair and keep your pelvis neutral to avoid rounding the lower back.</p>
         <p>Keep your shoulders relaxed and down.</p>
 
-        <button onclick="window.location.href='good_posture.html'">Next ➡</button>
+        <div class="button-group">
+            <button onclick="window.location.href='tips.html'">Next ➡</button>
+        </div>
     </div>
 </body>
 </html>
