--- a/setup/all_set.html
+++ b/setup/all_set.html
@@ -29,7 +29,10 @@
         <h1>All Set!</h1>
         <p>Great job! Your posture tracking setup is complete.</p>
         <p>You're now ready to start monitoring and improving your posture.</p>
-        <button onclick="window.location.href='../index.html'">Go to Dashboard</button>
+
+        <div class="button-group">
+            <button onclick="window.location.href='../index.html'">Go to Dashboard</button>
+        </div>
     </div>
 </body>
 </html>
