--- a/setup/tips.html
+++ b/setup/tips.html
@@ -30,7 +30,9 @@
         <p>For best results:</p>
         <p>Don't move your computer or adjust the screen angle during the setup process.</p>
         <p>You can come back any time to redo these setup steps if your slouches are not being detected correctly.</p>
-        <button onclick="window.location.href='good_posture.html'">Next ➡</button>
+        <div class="button-group">
+            <button onclick="window.location.href='good_posture.html'">Next ➡</button>
+        </div>
     </div>
 </body>
 </html>
