--- a/setup/good_posture.html
+++ b/setup/good_posture.html
@@ -34,10 +34,12 @@
         <p>Feel free to move around a little.</p>
 
         <div class="button-group">
-            <button onclick="startCamera()">🎥 Try It Now</button>
+            <button id="startRecording">🎥 Start Recording</button>
+            <button id="stopRecording">⏹ Stop Recording</button>
             <button onclick="window.location.href='bad_posture.html'">Next ➡</button>
         </div>
         
+        <canvas id="canvas" style="display: none;"></canvas>
         <video id="camera-feed" autoplay></video>
     </div>
 
