connected the ui altogether

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="sidebar">
         <div class="sidebar-icon logo">
             <!-- Replace with your actual logo -->
-            <img src="images/logo.png" alt="PostureX Logo">
+            <img src="images/home-icon.png" alt="PostureX Logo">
         </div>
         <div class="sidebar-icon active">
-            <img src="images/home-icon.svg" alt="Home">
+            <a href="index.html"><img src="images/home-icon.png" alt="Home"></a>
         </div>
         <div class="sidebar-icon">
-            <img src="images/stats-icon.svg" alt="Stats">
+            <a href="setup.html"><img src="images/stats-icon.svg" alt="Setup"></a>
         </div>
         <div class="sidebar-icon">
-            <img src="images/settings-icon.svg" alt="Settings">
+            <a href="settings.html"><img src="images/settings-icon.svg" alt="Settings"></a>
         </div>
         <div class="sidebar-icon">
             <img src="images/logout-icon.svg" alt="Log Out">
@@ -31,6 +31,14 @@
     <div class="main-content">
         <div class="header">
             <h1>My Dashboard</h1>
+            <div class="nav-container">
+                <a href="setup.html">Setup Intro</a>
+                <a href="setup/how_to_sit.html">How to Sit</a>
+                <a href="setup/tips.html">Tips</a>
+                <a href="setup/good_posture.html">Good Posture</a>
+                <a href="setup/bad_posture.html">Bad Posture</a>
+                <a href="setup/all_set.html">All Set</a>
+            </div>
             <div class="filter-container">
                 <span class="filter-text">Filter stats</span>
                 <div class="filter-button">
