--- a/setup/how_to_sit.html
+++ b/setup/how_to_sit.html
@@ -3,39 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to Sit</title>
+    <title>How to Sit - PostureX</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="sidebar">
-        <h2>PostureX</h2>
-        <ul>
-            <li><a href="..\index.html">🏠 Dashboard</a></li>
-            <li><a href="..\setup.html">📷 Setup Camera</a></li>
-            <li><a href="..\settings.html">⚙️ Settings</a></li>
-        </ul>
-    </div>
-
-    <div class="main-content">
-        <nav class="top-nav">
-            <a href="../setup.html">Setup Intro</a>
-            <a href="how_to_sit.html" class="active">How to Sit</a>
-            <a href="tips.html">Tips</a>
-            <a href="good_posture.html">Good Posture</a>
-            <a href="bad_posture.html">Bad Posture</a>
-            <a href="all_set.html">All Set</a>
-        </nav>
-
-        <h1>How to Sit</h1>
-        <p>Sitting with good posture is dependent on many factors.</p>
-        <p>Position your computer screen level with your eyeline so that you don't need to tilt your head forward to look at it.</p>
-        <p>If using a laptop, a stand and separate keyboard and mouse can help to prevent you from hunching over forwards.</p>
-        <p>Sit your hips to the back of the chair and keep your pelvis neutral to avoid rounding the lower back.</p>
-        <p>Keep your shoulders relaxed and down.</p>
-
-        <div class="button-group">
-            <button onclick="window.location.href='tips.html'">Next ➡</button>
+        <div class="sidebar-icon logo">
+            <img src="../images/home-icon.png" alt="PostureX Logo">
         </div>
-    </div>
-</body>
-</html>
+        <div class="sidebar-icon">
+            <a href="../index.html"><img src="../images/home-icon.png" alt="Home"></a>
+        </div>
+        <div class="sidebar-icon active">
+            <a href="../setup.html"><img src="../images/stats-icon.svg" alt="Setup"></a>
+        </div>
+        <div class="sidebar-icon">
+            <a href="../settings.html"><img src="../images/settings-icon.svg" alt="Settings"></a>
+        </div>
+        <div class="sidebar-icon">
+            <img src="../images/logout-icon.svg" alt="Log Out">
