--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="index.html">🏠 Home</a></li>
             <li><a href="setup.html">📷 Setup Camera</a></li>
             <li><a href="settings.html">⚙️ Settings</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </div>
     
@@ -59,8 +60,10 @@
             <p>76 out of 100 minutes</p>
             <canvas id="rankChart"></canvas>
         </div>
+        <canvas id="canvas" style="display: none;"></canvas>
+        <video id="camera-feed"></video>
     </div>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
