--- a/setup.html
+++ b/setup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PostureX - Setup</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="video.css">
 </head>
 <body>
     <div class="sidebar">
