--- a/login.html
+++ b/login.html
@@ -23,5 +23,6 @@
             window.location.href = "index.html";
         }
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
