--- a/register.html
+++ b/register.html
@@ -10,28 +10,22 @@
     <div class="auth-box">
         <h2>Register</h2>
         <form onsubmit="redirectToIndex(event); captureAndSendUserData();">
-            <input type="text" name="full_name" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="number" name="age" placeholder="Age" required>
-            <select name="gender" required>
+            <input type="text" id="full_name" placeholder="Full Name" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <input type="number" id="age" placeholder="Age" required>
+            <select id="gender" required>
                 <option value="">Select Gender</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
                 <option value="other">Other</option>
             </select>
-            <input type="text" name="country" placeholder="Country" required>
+            <input type="text" id="country" placeholder="Country" required>
             <button type="submit">Register</button>
         </form>
         <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
 
-    <script>
-        function redirectToIndex(event) {
-            event.preventDefault(); // Prevent form submission
-            window.location.href = "index.html";
-        }
-    </script>
     <script src="script.js"></script>
 </body>
 </html>
