--- a/index.html
+++ b/index.html
@@ -11,34 +11,25 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-icon logo">
-            <!-- Replace with your actual logo -->
             <img src="images/home-icon.png" alt="PostureX Logo">
         </div>
         <div class="sidebar-icon active">
-            <a href="index.html"><img src="images/home-icon.png" alt="Home"></a>
+            <a href="index.html"><img src="images/dashboard.png" alt="Home"></a>
         </div>
         <div class="sidebar-icon">
-            <a href="setup.html"><img src="images/stats-icon.svg" alt="Setup"></a>
+            <a href="setup.html"><img src="images/calibration.png" alt="Setup"></a>
         </div>
         <div class="sidebar-icon">
-            <a href="settings.html"><img src="images/settings-icon.svg" alt="Settings"></a>
+            <a href="settings.html"><img src="images/settings.png" alt="Settings"></a>
         </div>
         <div class="sidebar-icon">
-            <img src="images/logout-icon.svg" alt="Log Out">
+            <img src="images/logout.png" alt="Log Out">
         </div>
     </div>
     
     <div class="main-content">
         <div class="header">
             <h1>My Dashboard</h1>
-            <div class="nav-container">
-                <a href="setup.html">Setup Intro</a>
-                <a href="setup/how_to_sit.html">How to Sit</a>
-                <a href="setup/tips.html">Tips</a>
-                <a href="setup/good_posture.html">Good Posture</a>
-                <a href="setup/bad_posture.html">Bad Posture</a>
-                <a href="setup/all_set.html">All Set</a>
-            </div>
             <div class="filter-container">
                 <span class="filter-text">Filter stats</span>
                 <div class="filter-button">
