Implemented complementary functionalities of front-end and API

--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body class="auth-container">
     <div class="auth-box">
         <h2>Register</h2>
-        <form onsubmit="redirectToIndex(event); captureAndSendUserData();">
+        <form id = "registerForm">
             <input type="text" id="full_name" placeholder="Full Name" required>
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
