fix camera not working on bad, good, index html

--- a/index.html
+++ b/index.html
@@ -207,9 +207,11 @@
         </div>
         
         <!-- Hidden video element for posture monitoring -->
+        <video id="camera-feed" autoplay style="display: none;"></video>
         <canvas id="posture-canvas" style="display: none;"></canvas>
     </div>
 
     <script src="script.js"></script>
+    <script src="video.js"></script>
 </body>
 </html>
