--- a/setup/bad_posture.html
+++ b/setup/bad_posture.html
@@ -57,14 +57,14 @@
             </div>
             
             <div class="action-button-container">
-                <button class="start-button" id="startBadPostureRecording">Start Recording</button>
-                <button class="start-button" id="stopBadPostureRecording" style="display: none;">Stop Recording</button>
+                <button class="start-button" id="startMonitoring">Start</button>
+                <!-- <button class="start-button" id="stopBadPostureRecording" style="display: none;">Stop Recording</button> -->
                 <button class="start-button" onclick="window.location.href='all_set.html'">Continue</button>
             </div>
         </div>
     </div>
 
 
-    <script src="../script.js"></script>
+    <script src="../video.js"></script>
 </body>
 </html>
