--- a/setup/good_posture.html
+++ b/setup/good_posture.html
@@ -57,8 +57,8 @@
             </div>
             
             <div class="action-button-container">
-                <button class="start-button" id="startGoodPostureRecording">Start Recording</button>
-                <button class="start-button" id="stopGoodPostureRecording" style="display: none;">Stop Recording</button>
+                <button class="start-button" id="startMonitoring">Start Recording</button>
+                <!-- <button class="start-button" id="stopGoodPostureRecording" style="display: none;">Stop Recording</button> -->
                 <button class="start-button" onclick="window.location.href='bad_posture.html'">Continue</button>
             </div>
         </div>
@@ -66,6 +66,6 @@
     
 
 
-    <script src="../script.js"></script>
+    <script src="../video.js"></script>
 </body>
 </html>
