--- a/setup/tips.html
+++ b/setup/tips.html
@@ -13,23 +13,23 @@
     <div class="sidebar">
         <div class="sidebar-icon logo">
             <img src="../images/home-icon.png" alt="PostureX Logo">
-            <span class="tooltip">PostureX</span>
+            <!-- <span class="tooltip">PostureX</span> -->
         </div>
         <div class="sidebar-icon">
             <a href="../index.html"><img src="../images/dashboard.png" alt="Home"></a>
-            <span class="tooltip">Dashboard</span>
+            <!-- <span class="tooltip">Dashboard</span> -->
         </div>
         <div class="sidebar-icon active">
             <a href="../setup.html"><img src="../images/calibration.png" alt="Setup"></a>
-            <span class="tooltip">Setup</span>
+            <!-- <span class="tooltip">Setup</span> -->
         </div>
         <div class="sidebar-icon">
             <a href="../settings.html"><img src="../images/settings.png" alt="Settings"></a>
-            <span class="tooltip">Settings</span>
+            <!-- <span class="tooltip">Settings</span> -->
         </div>
         <div class="sidebar-icon">
             <img src="../images/logout.png" alt="Log Out">
-            <span class="tooltip">Log Out</span>
+            <!-- <span class="tooltip">Log Out</span> -->
         </div>
     </div>
     
