polish camera section

--- a/setup.html
+++ b/setup.html
@@ -39,10 +39,6 @@
             <a href="setup/all_set.html" class="active" style="text-decoration: none; color: #2b3f5c; background-color: whitesmoke; padding: 10px 15px; border-radius: 5px; transition: 0.3s; font-weight: bold;">All Set</a>
         </nav>
             <h1>Step 1: Introduction to PostureX!</h1>
-            <div class="filter-container">
-                <div class="filter-button">
-                </div>
-        </div>
 
         <!-- Setup Instructions Card -->
         <div class="card">
@@ -57,27 +53,14 @@
                 <p>Make sure you're seated properly in front of the camera, and follow the next steps.</p>
             </div>
 
-            <!-- <div class="monitor-button-container">
+            <div class="monitor-button-container">
                 <div class="monitor-status">
                     <div class="status-icon"></div>
                     <span>Start recording your posture</span>
                 </div>
-                <button class="start-button" id="startRecording">Start Recording</button>
-            </div> -->
-        </div>
-
-        <!-- Video Feed Card -->
-        <!-- <div class="card">
-            <div class="card-header">
-                <h2 class="card-title">Camera Feed</h2>
+                <button class="start-button" id="startMonitoring">Start Recording</button>
             </div>
-            <div class="card-content">
-                <div class="progress-chart">
-                    <video id="camera-feed" autoplay></video>
-                    <canvas id="canvas" style="display: none;"></canvas>
-                </div>
-            </div> -->
-            
+
             <div class="monitor-button-container">
                 <div class="monitor-status">
                     <div class="status-icon"></div>
@@ -85,11 +68,23 @@
                 </div>
                 <button class="start-button" onclick="window.location.href='setup/how_to_sit.html'">Continue</button>
             </div>
+            
+        </div>
+
+        <!-- Video Feed Card -->
+        <div class="card">
+            <div class="card-header">
+                <h2 class="card-title">Camera Feed</h2>
+            </div>
+            <div class="card-video">
+                    <video id="camera-feed" autoplay></video>
+                    <canvas id="posture-canvas" style="display: none;"></canvas>
+            </div>
         </div>
     </div>
 
 
     <!-- Scripts -->
-    <script src="script.js"></script>
+    <script src="video.js"></script>
 </body>
 </html>
