--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="settings.html"><img src="images/settings.png" alt="Settings"></a>
         </div>
         <div class="sidebar-icon">
-            <img src="images/logout.png" alt="Log Out">
+            <a href="login.html"><img src="images/logout.png" alt="Log Out"></a>
         </div>
     </div>
     
