Added camera back

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <p>76 out of 100 minutes</p>
             <canvas id="rankChart"></canvas>
         </div>
-        <canvas id="canvas" style="display: none;"></canvas>
-        <video id="camera-feed"></video>
+        <canvas id="canvas"></canvas>
+        <video id="camera-feed" autoplay></video>
     </div>
     
     <script src="script.js"></script>
